[gd_scene load_steps=2 format=3 uid="uid://dp6gpniq4ko8l"]

[ext_resource type="Script" uid="uid://bhuel7jiqmqcc" path="res://Scenes/TelaGaragem.gd" id="1_2cd46"]

[node name="TelaGaragem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2cd46")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SetaEsquerdaButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CarroAtualLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SetaDireitaButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="VermelhoButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="AzulButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VerdeButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VoltarButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
